fix new payment text align

--- a/ember/app/styles/trip/trip.scss
+++ b/ember/app/styles/trip/trip.scss
@@ -68,6 +68,10 @@
 	font-size: 16px;
 }
 
+.new-payment-text {
+	padding: 10px 0px;
+}
+
 
 /** TRIP SUMMARY SIDEBAR **/
 .trip-sidebar {
